--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "commander": "^2.9.0",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.10.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
